--- a/config/locales/models-zh-TW.yml
+++ b/config/locales/models-zh-TW.yml
@@ -12,4 +12,7 @@ zh-TW:
         category: 分類
         description: 問題描述
         deadline: 期限
-        
+        initial: 未處理
+        processing: 處理中
+        complete: 完成，等待結案
+        close: 結案
