--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -5,7 +5,7 @@
   sign_up: 註冊
   username: 姓名
   password: 密碼
-  service_system: 客服系統
+  service_system: 客訴服務系統
   name: 姓名
   requests_amount: 客訴單數量
   requests: 客訴單
@@ -30,7 +30,7 @@
     operation: 操作
     not_assigned: 未指派人員
     no_comments: 無留言
-    check_detail: 查看細節
+    reply: 回覆
     description: 問題描述
     translate_desc: 問題描述 - 翻譯
     created: 已成功新增客訴單
@@ -48,7 +48,7 @@
   add_new_user_success: "已成功新增使用者 %{name}"
   confirm_assignment: 你確定修改指派人員?
   control_panel: 功能面板
-  upload_images: 上傳圖片
+  upload_images: 上傳圖片/影片
   add_images: 新增圖片
   upload_attachments: 上傳附件
   add_attachments: 新增附件
@@ -76,8 +76,12 @@
   overdue: 已超過處理期限
   sidebar:
     manage_user: 使用者管理
-    manage_category: 分類管理
-    manage_service_request: 客訴單管理
+    background_management: 後台
+    manage_service_request: 客訴單
   comments:
     title: 留言板
     unit: 則
+  chinese: 中文
+  english: 英文
+  note: 備註
+  operation: 操作
