--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -36,6 +36,7 @@
     created: 已成功新增客訴單
     updated: 已成功更新客訴單
     destroyed: 已刪除客訴單
+    basic_info: 客訴單基本資料
   add_category_success: 分類已新增
   delete_category_success: 分類已刪除
   delete_confirm: 確定要刪除嗎?
