--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -86,3 +86,5 @@ en:
   operation: Operation
   error:
     invalid_equipment_id: Equipment Id Invalid
+  placeholder:
+    equipment_id: 'please enter EF-xxxx, example: EF-1234'
