add responsible table

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -47,6 +47,7 @@
   staffs_list: 員工名單
   add_new_user: 新增使用者
   add_new_user_success: "已成功新增使用者 %{name}"
+  update_user_success: "已成功更新使用者 %{name} 的資料"
   confirm_assignment: 你確定修改指派人員?
   control_panel: 功能面板
   upload_images: 上傳圖片/影片
@@ -79,6 +80,7 @@
     manage_user: 使用者管理
     background_management: 後台
     manage_service_request: 客訴單
+    responsible_table: 負責人員
   comments:
     title: 留言板
     unit: 則
