--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -71,11 +71,14 @@
   change_to_complete: 處理完成
   close_this_issue: 結案
   reject_and_reprocess: 駁回
-  update_assignment: 重新指派
+  update_assignment: 指派
   category_list: 分類清單
   add_category: 新增分類
   overdue_after_days: "再%{days}天到期"
   overdue: 已超過處理期限
+  main_owner: 負責人
+  assigned_sales: 指派業務
+  assigned_tech: 指派技師
   sidebar:
     manage_user: 使用者管理
     background_management: 後台
